--- a/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.pug
+++ b/src/templates/valve-controller/filter-tabs/customization/installer-setup/installer-setup.pug
@@ -1,8 +1,8 @@
 .installer-setup
     .installer-setup__container
         .installer-setup__nav-tabs
-            a.installer-setup__nav-tab.active(href='#', data-tab='filter-1') Блокировка кнопок
-            a.installer-setup__nav-tab(href='#', data-tab='filter-2') Снятие блокировки кнопок
+            a.installer-setup__nav-tab.active() Блокировка кнопок
+            a.installer-setup__nav-tab() Снятие блокировки кнопок
             +transparentBtn('Перезагрузка')
     .installer-setup__columns
         +customizationInput('Время клапана', '16:07', '16:07')
