--- a/src/templates/valve-controller/filter-tabs/customization/сonfiguration/configuration-pagination/configuration-pagination.scss
+++ b/src/templates/valve-controller/filter-tabs/customization/сonfiguration/configuration-pagination/configuration-pagination.scss
@@ -29,6 +29,7 @@
         margin: 0px 0 40px;
         @media (max-width: $tabletWide) {
             flex-direction: column;
+            margin-top: 30px;
         }
     }
     &__warning {
