fix sertificates imgs

--- a/src/templates/header/header.scss
+++ b/src/templates/header/header.scss
@@ -3,15 +3,17 @@
     transition: $transition;
 
     &.--scrolled {
-        position: fixed;
-        width: 100%;
-        z-index: 90;
-        box-shadow: $shadow;
-        & .header__container {
-            padding: 10px 20px 10px 20px;
-        }
-        & .header__start-tel {
-            font-size: 17px;
+        @media (max-width: $tablet) {
+            position: fixed;
+            width: 100%;
+            z-index: 90;
+            box-shadow: $shadow;
+            & .header__container {
+                padding: 10px 20px 10px 20px;
+            }
+            & .header__start-tel {
+                font-size: 17px;
+            }
         }
     }
 
